Bound Doc Virtual Threads